--- a/onboarding-individual.html
+++ b/onboarding-individual.html
@@ -932,11 +932,11 @@
           </div>        </div>
         
         <div style="display: flex; flex-direction: column; gap: 20px; align-items: center; margin-top: 20px;">
-          <a href="https://ko-fi.com/markbennett" target="_blank" class="pay-btn" id="payment-btn">
+          <a href="https://ko-fi.com/s/cd96925d8f" target="_blank" class="pay-btn" id="payment-btn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
               <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.5 4.5 3 7.5 3c1.54 0 3.15.67 4.5 1.78C13.35 3.67 14.96 3 16.5 3 19.5 3 22 5.5 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            Pay $30 Monthly Subscription on Ko-fi
+            Pay $30 Monthly Subscription
           </a>
           
           <div style="color: var(--muted); font-size: 0.95rem; text-align: center; max-width: 600px;">
